@@ -1,6 +1,6 @@
 Package: car
 Version: 3.1-1
-Date: 2022-07-27
+Date: 2022-08-20
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
