@@ -41,7 +41,8 @@ scatter3d(x, ...)
 	  sphere.size=1, radius=1, threshold=0.01, speed=1, fov=60,
 	  fit="linear", groups=NULL, parallel=TRUE,
 	  ellipsoid=FALSE, level=0.5, ellipsoid.alpha=0.1, id=FALSE,
-	  model.summary=FALSE, ...)
+	  model.summary=FALSE, 
+	  reg.function, reg.function.col=surface.col[length(surface.col)], ...)
 
 Identify3d(x, y, z, axis.scales=TRUE, groups = NULL, labels = 1:length(x),
 	col = c("blue", "green", "orange", "magenta", "cyan", "red", "yellow", "gray"),
@@ -135,6 +136,8 @@ You have to install the \code{rgl} package to produce 3D plots.  On a Macintosh 
     least as many colours as groups; if there are no groups, the first colour is used. Normally, the colours
     would correspond to the \code{surface.col} argument to \code{scatter3d}.}
   \item{offset}{vertical displacement for point labels (to avoid overplotting the points).}
+  \item{reg.function}{an arithmetic expression that is a function of \code{x} and \code{z} (respectively, the horizontal and out-of-screen explanatory variables), representing an arbitrary regression function to plot.}
+  \item{reg.function.col}{color to use for the surface produced by \code{reg.function}; defaults to the \emph{last} color in \code{surface.col}.}
   \item{\dots}{arguments to be passed down.}
 }
 
