@@ -3,6 +3,8 @@ Changes to Version 3.1-1
   o Fixed bug in Anova.survreg() for Wald tests (reported by Megan Taylor Jones), which failed with a spurious "missing residual df" error.
   
   o Made Anova.lm() more robust when there are aliased coefficients (following report of cryptic output by Taiwo Fagbohungbe).
+  
+  o Added reg.function argument to scatter3d().
 
 Changes to Version 3.1-0
 
